--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Viga&display=swap');
 
 html {
-  background-image: linear-gradient( 132.6deg,  rgba(71,139,214,1) 23.3%, rgba(37,216,211,1) 84.7% );
+  background: #451FDF;
   height: 100vh;
 }
 
